--- a/package.json
+++ b/package.json
@@ -1,32 +1,31 @@
 {
-  "name": "hasura-graphql-tutorial-todo",
+  "name": "react-apollo-todo",
   "version": "0.1.0",
   "engines": {
-    "node": "8.9.1"
+    "node": "8.17.0"
   },
   "private": true,
   "dependencies": {
-    "@playlyfe/gql": "^2.6.1",
-    "apollo-boost": "^0.3.1",
-    "apollo-link-ws": "^1.0.17",
-    "auth0-js": "^9.10.1",
-    "bootstrap": "^4.1.3",
-    "graphql": "^14.2.1",
-    "moment": "^2.22.2",
-    "prop-types": "^15.6.2",
-    "react": "^16.8.6",
-    "react-apollo": "^2.5.4",
-    "react-bootstrap": "^0.32.4",
-    "react-dom": "^16.8.6",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "subscriptions-transport-ws": "^0.9.16"
+    "@apollo/client": "3.0.2",
+    "@auth0/auth0-spa-js": "1.2.3",
+    "bootstrap": "4.3.1",
+    "graphql": "15.1.0",
+    "moment": "2.24.0",
+    "prop-types": "15.7.2",
+    "react": "16.10.2",
+    "react-bootstrap": "1.0.0-beta.14",
+    "react-dom": "16.10.2",
+    "react-router": "5.0.1",
+    "react-router-dom": "5.0.1",
+    "subscriptions-transport-ws": "^0.9.17"
   },
   "devDependencies": {
-    "husky": "^1.0.0-rc.15",
-    "lint-staged": "^7.3.0",
+    "eslint-plugin-prettier": "3.1.0",
+    "eslint-plugin-react-hooks": "2.0.1",
+    "husky": "1.3.1",
+    "lint-staged": "7.3.0",
     "prettier": "1.14.3",
-    "react-scripts": "^2.1.8"
+    "react-scripts": "2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
